--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         align-content: center;
         margin-top: -80px;
     }
+    input[type="submit"]{height:28px}
+/* 搜索框 */
     .form-inline{
         text-align: center;
         margin: 130px auto 20px;
@@ -42,13 +44,15 @@
 	    line-height: 32px;	
 	    height: 32px;	
 	}
-    #searchengineitems{
+	    
+	    
+    .items{
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
 	max-width: 800px;
     }
-    .pans,.jike,.life{
+    .items div{
         margin: 16px auto;
         text-align: center;
     }
