--- a/index.html
+++ b/index.html
@@ -28,12 +28,17 @@
         text-align: center;
         margin: 130px auto 20px;
     }
+    .form-inline button{
+	height:36px;
+    }
+		   
 	#search{
             width: 70%;
 	    text-align: center;
- 	    line-height: 32px;	
-	    height: 32px;
-	    font-size: 18px;
+ 	    line-height: 36px;	
+	    height: 36px;
+	    border-radius:16px;
+	    font-size: 13.3333px;font-weight:400;
 	    outline: none;
 	    border: none;
 	}
