--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     }
     .form-inline button{
 	height:36px;
+	vertical-align:middle;
+    }
+    .form-inline button{
+	height:36px;
     }
 		   
 	#search{
