--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         }
         
         document.onkeyup = function (e) {  
-            if (window.event)//如果window.event对象存在，就以此事件对象为准  
+            if (window.event)  
                 e = window.event;  
             var code = e.charCode || e.keyCode;  
             if (code == 13) FindData();           
