--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         height:100vh;
 		background-position: center top;
 		margin:0;
+        position:relative;
+        z-index:999;
 	}
     div#main{
         display: flex;
@@ -65,11 +67,18 @@
         margin: 16px auto;
         text-align: center;
     }
+    .yanhua{
+        position:relative;
+        z-index:-99;
+    }
     </style>
 </head>
 <body>
-
- <main id="main">			    
+<div class="yanhua">
+    <canvas id="fireworksField" width="685" height="635" style="position: absolute; top: 0px; left: 0px; opacity: 0.9;"></canvas>
+</div>	
+ <main id="main">		
+                
 	    	<div id="sform" class="form-inline" role="form">
 	    	        <input id="search" type="text" placeholder="find it" autofocus onfocus="this.placeholder=''" onblur="this.placeholder='find it'" autocomplete="off" class="form-control input-lg">
 	    	        <button id="searchengine" data-url1="" value="百度" onclick="FindData(event);">百度</button>
@@ -149,5 +158,15 @@ document.querySelector('.life').innerHTML = ops_life
 	
 });		 
 </script>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/yuwengeng/jscdn/jquery.fireworks.js"></script>
+    <script type="text/javascript">
+	$(document.getElementsByClassName('yanhua')[0]).fireworks({ 
+	  sound: false, 
+	  opacity: 0.8, 
+	  width: '100%', 
+	  height: '100%' 
+	});
+     </script>
 </body>
 </html>
