--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         transform: translate(-50%, -50%);
     }
     canvas{
-        width:95vw;
-        height:66vh;
+        width:100%;
+        height:86vh;
         justify-content:center;
         align-items:center;    }
     </style>
@@ -94,7 +94,6 @@
 	    	        <button id="searchengine" data-url1="" value="百度" onclick="FindData(event);">百度</button>
 	    	</div>	
            <div class="yanhua">
-                <canvas id="fireworksField" style="position: absolute; top: 0px; left: 0px; opacity: 0.9;"></canvas>
             </div>	 		
 	<div class="items">
             <div class="all"></div>  
