--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
         height:100%;
         /* margin-top: -70px; */
     }
-    input[type="submit"]{
+    input[type="submit"],button{
         height:28px;
         margin-right:3px;
         vertical-align:top;
+	border-radius:3px;
+        border-width:0;
+        outline:0;
+        cursor:pointer;
     }
     input[type="submit"]:hover{
         background:lightblue;
@@ -58,10 +62,7 @@
 	input:placeholder {
 	    color: #fafafa8a; 
 	} 
-	#searchengine{
-	    line-height: 32px;	
-	    height: 32px;	
-	}      
+	     
     .items{
         display: flex;
         justify-content: center;
