--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         position:relative;
         z-index:999;
 	}
+body, input{cursor:url(https://www.yunmge.com/code/img/shubiao/1.cur), default;} input:hover {cursor:url(https://www.yunmge.com/code/img/shubiao/2.cur),wait;}	    
+	    
     main{
         width:100%;
         height:100%;
