--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ document.querySelector('.life').innerHTML = ops_life;
 document.querySelector('.index').innerHTML = ops_index;
 });		 
 </script>
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<!-- <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/yuwengeng/jscdn/jquery.fireworks.js"></script>
 <script type="text/javascript">
 	$(document.getElementsByClassName('yanhua')[0]).fireworks({ 
@@ -200,6 +200,6 @@ document.querySelector('.index').innerHTML = ops_index;
 	  width: '100%', 
 	  height: '100%' 
 	});
-</script>
+</script> -->
 </body>
 </html>
