--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			width: 100vw;
 			height: 100vh;
 			background-position: center top;
+			background-size: cover;
 			margin: 0;
 			padding: 0;
 			position: relative;
