--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		input[type="submit"],
 		button {
 			height: 28px;
-			margin-right: 3px;
+			margin-right: calc(0.3vw + 2px);
 			vertical-align: top;
 			border-radius: 3px;
 			border-width: 0;
@@ -39,6 +39,7 @@
 
 		input[type="submit"]:hover {
 			background: lightblue;
+			transform: scale(1.3);
 		}
 
 		/* 搜索框 */
