--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
             </div> 
             <div class="bt"></div> 
             <div class="index"></div>
+            <div class="AI"></div>
+		
     </div> 
  </main> 
 <template>
