--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div> 
             <div class="bt"></div> 
             <div class="index"></div>
-            <div class="AI"></div>
+            <div class="ai"></div>
 		
     </div> 
  </main> 
