--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@ let ops_jike = strTemplate.interpolate(json,'jike')
 let ops_bt = strTemplate.interpolate(json,'bt')
 let ops_life = strTemplate.interpolate(json,'life')
 let ops_index = strTemplate.interpolate(json,'index')
+let ops_ai = strTemplate.interpolate(json,'ai')
 
 document.querySelector('.all').innerHTML = ops_all;
 document.querySelector('.pans').innerHTML = ops_pans
@@ -182,9 +183,10 @@ document.querySelector('.jike').innerHTML = ops_jike
 document.querySelector('.bt').innerHTML = ops_bt
 document.querySelector('.life').innerHTML = ops_life;	
 document.querySelector('.index').innerHTML = ops_index;
+document.querySelector('.ai').innerHTML = ops_ai;	
 });		 
 </script>
-<!-- <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/yuwengeng/jscdn/jquery.fireworks.js"></script> 
 <script type="text/javascript">
 	$(document.getElementsByClassName('yanhua')[0]).fireworks({ 
@@ -193,6 +195,6 @@ document.querySelector('.index').innerHTML = ops_index;
 	  width: '100%', 
 	  height: '100%' 
 	});
-</script> -->
+</script>
 </body>
 </html>
