--- a/index.html
+++ b/index.html
@@ -101,6 +101,45 @@
 			align-items: center;
 		}
 	</style>
+<script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+            navigator.serviceWorker.register('/sw.js');
+        });
+    }
+// sw.js
+/**
+  References:
+  1. https://developers.google.com/web/fundamentals/primers/service-workers
+  2. https://developers.google.com/web/fundamentals/instant-and-offline/offline-cookbook
+  3. https://googlechrome.github.io/samples/service-worker/
+  4. https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API/Using_Service_Workers
+  5. https://serviceworke.rs/
+*/
+const RUNTIME = 'runtime';
+self.skipWaiting();
+self.addEventListener('fetch', (event) => {
+    if (event.request.url.startsWith(self.location.origin)) {
+        event.respondWith(
+            (async () => {
+                const cache = await caches.open(RUNTIME);
+                const cachedResponse = await cache.match(event.request);
+                const networkResponsePromise = fetch(event.request);
+
+                event.waitUntil(
+                    (async () => {
+                        const networkResponse = await networkResponsePromise;
+                        await cache.put(event.request, networkResponse.clone());
+                    })()
+                );
+
+                // Returned the cached response if we have one, otherwise return the network response.
+                return cachedResponse || networkResponsePromise;
+            })()
+        );
+    }
+});
+</script>
 </head>
 
 <body>
@@ -186,7 +225,7 @@ document.querySelector('.index').innerHTML = ops_index;
 document.querySelector('.ai').innerHTML = ops_ai;	
 });		 
 </script>
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<!-- <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/yuwengeng/jscdn/jquery.fireworks.js"></script> 
 <script type="text/javascript">
 	$(document.getElementsByClassName('yanhua')[0]).fireworks({ 
@@ -195,6 +234,6 @@ document.querySelector('.ai').innerHTML = ops_ai;
 	  width: '100%', 
 	  height: '100%' 
 	});
-</script>
+</script> -->
 </body>
 </html>
