--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 			align-items: center;
 		}
 	</style>
-<script>
-importScripts('https://g.alicdn.com/kg/workbox/3.3.0/workbox-sw.js');
+	    <script src="https://g.alicdn.com/kg/workbox/3.3.0/workbox-sw.js"></script>
+<script type='module'>
 workbox.setConfig({
   modulePathPrefix: 'https://g.alicdn.com/kg/workbox/3.3.0/'
 });
