--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		html {
 			font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 			font-size: calc(10px + 0.33vw);
-			background: url('https://api.uixsj.cn/bing/bing.php') no-repeat;
+			background: url('https://source.unsplash.com/random') no-repeat;
+			background-position: center;
 			background-attachment: fixed;
 			width: 100vw;
 			height: 100vh;
@@ -19,11 +20,6 @@
 			padding: 0;
 			position: relative;
 			z-index: 999;
-		}
-		main {
-			width: 100%;
-			height: 100%;
-			/* margin-top: -70px; */
 		}
 		input[type="submit"],
 		button {
@@ -48,20 +44,28 @@
 		}
 
 		.form-inline button {
-			height: 36px;
-			vertical-align: middle;
+		    -webkit-appearance: none;
+		    background: #2a8cf5;
+		    border-radius: 26px;
+		    border: 0;
+		    box-sizing: border-box;
+		    color: #fff;
+		    cursor: pointer;
+		    font-size: 17px;
+		    height: 52px;
+		    margin-right: 2px;
+		    outline: 0;
+		    width: 120px;
 		}
-
-		.form-inline button {
-			height: 36px;
+		.form-inline button:hover{
+			background: #2d52d1;
 		}
-
 		#search {
 			width: 66vw;
 			text-align: center;
-			line-height: 36px;
-			height: 36px;
-			border-radius: 16px;
+			line-height: 56px;
+			height: 56px;
+			border-radius: 28px;
 			font-size: 13.3333px;
 			font-weight: 400;
 			outline: none;
