--- a/index.html
+++ b/index.html
@@ -38,7 +38,26 @@
 			background: lightblue;
 			transform: scale(1.3);
 		}
-
+		.columNav{
+			position: fixed;
+		    left: 0.6vw;
+		    top: 50%;
+		    background: rgba(0,0,0,0.5);
+		    transform: translateY(-50%);
+		    border-radius: 4px;
+		    width: 7vw;
+		    color: white;
+		}
+		.columNav > li{
+			list-style: none;
+		    text-align: center;
+		    line-height: 4vh;
+		    cursor: pointer;
+		}
+		.columNav > li:hover{
+			background: #2d52d1;
+			border-radius: 4px;
+		}
 		/* 搜索框 */
 		.form-inline {
 			text-align: center;
@@ -134,7 +153,12 @@
 </div><div class="ai">
 <input type="submit" value="近邻词" class="btn btn-primary" data-url="https://tool.mingdawoo.com/lang/nearby_word/search?ds=31&amp;q=${query}" onclick="change(event)"><input type="submit" value="Magi" class="btn btn-primary" data-url="https://magi.com/search?q=${query}" onclick="change(event)">
 </div></div> 
- </main> 
+ </main>
+ <nav class="columNav">
+ 	<ul>
+ 		<li></li>
+ 	</ul>	
+ </nav> 
 <template>
 ${data.map(function(obj, index){
     return `<input type="submit" value="${obj.title}" class="btn btn-primary" data-url="${obj.url}" onclick="change(event)">`
@@ -165,7 +189,29 @@ function FindData(event){
     let func = new Function('query', str);
     window.open(func(query));
 }
-	 
+
+
+// 生成navs
+const navs = document.getElementsByClassName('items')[0].children
+// for(const i =0; i< navs.length; i++){
+
+// }
+
+let ul = ''
+
+Array.prototype.forEach.call(navs,(item,index)=>{
+	console.log(item.className)
+	ul +=(`
+	<li>${item.className}</li>
+	`)
+
+})
+
+
+document.getElementsByClassName('columNav')[0].innerHTML = ul;
+
+	// const a = document.getElementsByClassName('pans')[0]
+	// document.getElementsByClassName('items')[0].innerHTML = a.innerHTML
 </script>
 
 
