--- a/index.html
+++ b/index.html
@@ -11,16 +11,12 @@
 		html {
 			font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 			font-size: calc(10px + 0.33vw);
-			background: url('https://source.unsplash.com/random') no-repeat;
-			background-position: center;
-			background-attachment: fixed;
+			background: antiquewhite;
 			width: 100vw;
 			height: 100vh;
-			background-size: cover;
 			margin: 0;
 			padding: 0;
 			position: relative;
-			z-index: 999;
 		}
 		input[type="submit"],
 		button {
@@ -32,6 +28,7 @@
 			outline: 0;
 			cursor: pointer;
 			box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+			margin-bottom: 2vh;
 		}
 
 		input[type="submit"]:hover {
@@ -194,17 +191,14 @@ function FindData(event){
 
 
 // 生成navs
-const navs = document.getElementsByClassName('items')[0].children
-// for(const i =0; i< navs.length; i++){
-
-// }
-
+const cache = document.getElementsByClassName('items')[0];
+const _ = cache.cloneNode(true);
+const navs = cache.children
 let ul = ''
 
 Array.prototype.forEach.call(navs,(item,index)=>{
-	console.log(item.className)
 	ul +=(`
-	<li>${item.className}</li>
+	<li onclick="changeRender('${item.className}')">${item.className}</li>
 	`)
 
 })
@@ -212,8 +206,16 @@ Array.prototype.forEach.call(navs,(item,index)=>{
 
 document.getElementsByClassName('columNav')[0].innerHTML = ul;
 
-	// const a = document.getElementsByClassName('pans')[0]
-	// document.getElementsByClassName('items')[0].innerHTML = a.innerHTML
+let currentKey = ''
+function changeRender(key){
+	if(currentKey !==key){
+		const a = _.getElementsByClassName(key)[0]
+		if(a){
+		 document.getElementsByClassName('items')[0].innerHTML = a.innerHTML
+		}
+	}
+	currentKey = key;
+}
 </script>
 
 
