--- a/tpl.html
+++ b/tpl.html
@@ -13,21 +13,17 @@
 		html {
 			font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 			font-size: calc(10px + 0.33vw);
-			background: url('https://source.unsplash.com/random') no-repeat;
-			background-position: center;
-			background-attachment: fixed;
+			background: antiquewhite;
 			width: 100vw;
 			height: 100vh;
-			background-size: cover;
 			margin: 0;
 			padding: 0;
 			position: relative;
-			z-index: 999;
 		}
 		input[type="submit"],
 		button {
 			height: 28px;
-			margin-right: calc(0.3vw + 2px);
+			margin-right: calc(0.4vw + 2px);
 			vertical-align: top;
 			border-radius: 3px;
 			border-width: 0;
@@ -175,14 +171,14 @@ function FindData(event){
 
 
 // 生成navs
-const navs = document.getElementsByClassName('items')[0].children
-
+const cache = document.getElementsByClassName('items')[0];
+const _ = cache.cloneNode(true);
+const navs = cache.children
 let ul = ''
 
 Array.prototype.forEach.call(navs,(item,index)=>{
-	console.log(item.className)
 	ul +=(`
-	<li>${item.className}</li>
+	<li onclick="changeRender('${item.className}')">${item.className}</li>
 	`)
 
 })
@@ -190,9 +186,16 @@ Array.prototype.forEach.call(navs,(item,index)=>{
 
 document.getElementsByClassName('columNav')[0].innerHTML = ul;
 
-	// const a = document.getElementsByClassName('pans')[0]
-	// document.getElementsByClassName('items')[0].innerHTML = a.innerHTML	
-
+let currentKey = ''
+function changeRender(key){
+	if(currentKey !==key){
+		const a = _.getElementsByClassName(key)[0]
+		if(a){
+		 document.getElementsByClassName('items')[0].innerHTML = a.innerHTML
+		}
+	}
+	currentKey = key;
+}
 </script>
 </body>
 </html>
