--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		html {
 			font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 			font-size: calc(10px + 0.33vw);
-			background: antiquewhite;
+			background: rgb(0 0 0 / 50%);
 			width: 100vw;
 			height: 100vh;
 			margin: 0;
